intro p no longer covers menu when scrolling effect occurs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,10 @@ button {
   text-align: center; /* Center content horizontally */
   z-index: 999; /* Overlay sits above the map */
 }
+#fade-out-paragraph {
+  position: relative;
+  z-index: 5;
+}
 .guidance-list li {
   padding: 0.5rem 0 0.5rem 0;
 }
@@ -240,6 +244,7 @@ button {
   transform: translateY(-10px);
   transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
   pointer-events: none;
+  z-index: 10;
 }
 .dropdown.active > .link + .dropdown-menu {
   opacity: 1;
@@ -255,7 +260,6 @@ button {
 .sign-in {
   white-space: wrap;
   min-width: 260px;
-  width: 100%;
 }
 
 .notice a {
